# Spontaneous-Fission

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
FissionMaterials/: material.py  sfr.py
SpontaneousFission/: __init__.py  material.py  nuclide.py  sfr.py
examples/: SpontaneousFissionTutorial.ipynb
src/FissionMaterials/: nuclide.py
src/data/: nuclides.csv
tests/: test_nuclides.py
